--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "ianka/kemet_projects",
     "type": "wordpress-plugin",
+    "version": "2.0.0",
     "autoload": {
         "psr-4": {
             "App\\": "src/",
